Fixed bug #69802 (Reflection on Closure::__invoke borks type hint class name)